fixed z-index bug with dropdown

--- a/styles/select-field.styl
+++ b/styles/select-field.styl
@@ -65,7 +65,7 @@ $select-field-box-shadow = 0 2px 0 rgba(0, 0, 0, .1)
   width: 100%;
   max-height: 200px;
   overflow: scroll;
-  z-index: 1000;
+  z-index: 1050; // Needs to be higher than .has-error
   background-color: white;
   border: $border;
   border-bottom-left-radius: $border-radius;
